--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "core-js": "^3.6.5",
     "d3": "^7.0.4",
     "vue": "^3.0.0",
-    "vue-router": "^3.5.2"
+    "vue-router": "^3.5.2",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
