--- a/package.json
+++ b/package.json
@@ -8,15 +8,15 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.4",
-    "core-js": "^3.6.5",
+    "core-js": "^3.19.0",
     "d3": "^7.0.4",
-    "vue": "^3.0.0",
-    "vue-router": "^3.5.2",
+    "vue": "^3.2.21",
+    "vue-router": "^3.5.3",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
-    "@vue/compiler-sfc": "^3.0.0"
+    "@vue/cli-plugin-babel": "^4.5.15",
+    "@vue/cli-service": "^4.5.15",
+    "@vue/compiler-sfc": "^3.2.21"
   }
 }
