--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@fortawesome/fontawesome-free": "^5.15.4",
     "core-js": "^3.19.0",
     "d3": "^7.0.4",
+    "js-levenshtein": "^1.1.6",
     "vue": "^3.2.21",
     "vue-router": "^3.5.3",
     "vuex": "^4.0.2"
